k8s/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app
spec:
  parentRefs:
    - kind: Gateway
      name: https-lb-fastly-gateway
      namespace: cluster-infra-https-lb-fastly
      sectionName: https
  rules:
    - matches:
        - headers:
            - name: x-zon-service
              value: httpbin/api
      backendRefs:
        - name: app
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: internal
spec:
  parentRefs:
    - kind: Gateway
      name: envoy-internal
      namespace: cluster-infra-envoy-gateway
  hostnames:
    - httpbin.ops.zeit.de
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: app
          port: 8080
